k8s/apps/srvc-io/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: srvc-io
  namespace: apps
  labels:
    app: srvc-io
    type: backends
spec:
  replicas: 1 # Number of replicas
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      app: srvc-io
  template:
    metadata:
      labels:
        app: srvc-io
        monitoring: "enabled"
        annotations:
          prometheus.io/scrape: "true"
          prometheus.io/port: "8080" 
    spec:
      imagePullSecrets:
        - name: pull-secret
      containers:
        - name: srvc-io
          image: registry.cri.epita.fr/mateo.lelong/inde1/srvc-io:v2.0.2
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          livenessProbe:
            httpGet:
              path: /q/health/live
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /q/health/ready
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 10
