k8s/apps/srvc-io/ingress.yml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: srvc-io
  namespace: apps
  labels:
    app: srvc-io
spec:
  ingressClassName: traefik
  rules:
    - http:
        paths:
          - path: /io
            pathType: Prefix
            backend:
              service:
                name: srvc-io
                port:
                  number: 8080
